gcp/k8s-ingress-ssl/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-flask-app
  template:
    metadata:
      labels:
        app: my-flask-app
    spec:
      containers:
        - name: my-flask-app-container
          image: swambugu/my-flask-image
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
              protocol: TCP
