gcp/k8s-ingress-ssl/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-flask-service
spec:
  selector:
    app: my-flask-app
  ports:
  - port: 5001
    targetPort: 5001
  type: NodePort
