gcp/k8s-ingress-ssl/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: my-nginx
  ports:
  - port: 8080
    targetPort: 80
  type: NodePort
