gcp/k8s-ingress-ssl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    # kubernetes.io/ingress.regional-static-ip-name: "web-static-ip"
    networking.gke.io/managed-certificates: managed-cert
    networking.gke.io/v1beta1.FrontendConfig: "http-to-https"
spec:
  rules:
  - host: gke.flask.nasir.id
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: my-flask-service
            port:
              number: 5001

  - host: gke.nginx.nasir.id
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-service
            port:
              number: 8080
